# burglar-assistant

./: .gitmodules  DESIGN.md  INSTRUCTION.md  README.md  burglar-assistant.cabal  stack.yaml
app/: Main.hs
src/: Assistant.hs  IO.hs  Types.hs
test/: AssistantSpec.hs  IOSpec.hs
