name:                burglar-assistant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blackheaven/burglar-assistant#readme
license:             BSD3
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2020 Gautier DI FOLCO
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assistant
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.6.2.*
                     , dijkstra-simple
  default-language:    Haskell2010

test-suite burglar-assistant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , burglar-assistant
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackheaven/burglar-assistant
